--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 # this for local
-# redirectUri: http://localhost:8080/oauth2callback
+redirectUri: http://localhost:8080/oauth2callback
 
 server:
   connection-timeout: 60000 
-  port: 9090   
-# this foeproduction
-redirectUri: https://my-project-204113.appspot.com/oauth2callback
+  port: 8080   
+# this for production
+# redirectUri: https://my-project-204113.appspot.com/oauth2callback
 
 spring:
   application:
     name: GoogleCloudDemo
     
-feign:
-  hystrix: 
-    enabled: true
+#feign:
+ # hystrix: 
+#    enabled: true
